--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MemoMaster</string>
+    <string name="app_name">메모 마스터</string>
     <string name="info_email">Dev.LunaStratos@gmail.com</string>
     <string name="info_me">LunaStratos</string>
     <string name="info_home">http://stratos.dothome.co.kr</string>
